--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,7 @@
 </head>
 <body>
     {{> _header}}
+    {{> _add_btn}}
     <div class="container">
     {{{body}}}
     </div>
@@ -19,10 +20,14 @@
     
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.19.1/ckeditor.js"></script>
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
+        M.FormSelect.init(document.querySelector('#status'))
+
+        CKEDITOR.replace('body', {
+            plugins:'wysiwygarea, toolbar, basicstyles, link'
+        })
     </script>
 </body>
 </html>
